--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ events {
 http {
     upstream mcp_backend {
         server mcp-filesystem:8080;
+        server mcp-github:8080;
     }
 
     server {
